Revert "fixed Ansible logo scrolling into rst content on small screen"
This reverts commit 339fd6d9fcc4e510bbcbf1a50c4f6054aafff4bb.

--- a/docs/docsite/_static/ansible.css
+++ b/docs/docsite/_static/ansible.css
@@ -166,14 +166,14 @@ table.documentation-table .value-required {
     height: 28px;
     margin-right: 8px;
     margin-top: -6px;
-/*     position: fixed; */
+    position: fixed;
 }
 
 
 .DocSiteNav-title {
     color: #fff;
     font-size: 20px;
-/*    position: fixed; */
+    position: fixed;
     margin-left: 40px;
     margin-top: -4px;
 
